# dynamic-nn

./: .gitignore  pyproject.toml
core_mlp/: __init__.py  initialization.py  module.py
datasets/: data_sets.py
examples/: example_mnist.py  mnist_example.py  trials.py
layers/: activation.py  dropout.py  linear.py  mlp.py
manual_engine/: tensor.py
optimizers/: SGD.py  adam.py  momentum.py  optim.py
tests/: test_activation.py  test_dropout.py  test_linear.py  test_module.py  test_optimizers.py  test_sgd.py
training/: losses.py  metrics.py  trainer.py
