[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dynamic-nn"
version = "0.1.0"
description = "From scratch dynamic neural network architecture"
authors = [{ name = "Karan Kalia" }]
dependencies = ["torch>=2.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["core_mlp*","layers*"]